--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install antlr4-tools
           pip list
+
+      - name: Generate parser
+        working-directory: project/graph_query_language
+        run: antlr4 -Dlanguage=Python3 -visitor GraphQueryLanguage.g4 -o generated
+
       - name: Test with pytest
         run: python ./scripts/run_tests.py
