--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,45 @@
+#name: Run tests
+#
+#on: [ pull_request ]
+#
+#jobs:
+#  test:
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        os: [ ubuntu-latest, windows-latest, macos-latest ]
+#        python-version: [ "3.10" ]
+#
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Set up Python ${{ matrix.python-version }}
+#        uses: actions/setup-python@v3
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
+#          pip install antlr4-tools
+#          pip list
+#
+#      - name: Generate parser
+#        working-directory: project/graph_query_language
+#        run: antlr4 -Dlanguage=Python3 -visitor GraphQueryLanguage.g4 -o generated
+#
+#      - name: Test with pytest
+#        run: python ./scripts/run_tests.py
 name: Run tests
 
-on: [ pull_request ]
+on: [ push, pull_request ]
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
         python-version: [ "3.10" ]
@@ -17,6 +51,12 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+
+      # Java 8 is the default on Mac and Windows runners, but 11 is required
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
 
       - name: Install dependencies
         run: |
